Third Edit to index.html

--- a/index.html
+++ b/index.html
@@ -21,71 +21,138 @@ from Udemy
 <h1>Dr R K Suresh</h1>
 <hr size="3" noshade="" >
 </center>-->
+  <body>
+    <table>
+      <tr>
+        <td>
+          <img
+            src="https://scontent.fmaa6-1.fna.fbcdn.net/v/t39.30808-6/317080064_123158903931753_1023207503705914209_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=730e14&_nc_ohc=P3A7ChhjrTkAX9kEFpG&_nc_ht=scontent.fmaa6-1.fna&oh=00_AfA9FD3W85Ev_G9LQf2-gcch-0CQLynGqgkpSSiukqgxMQ&oe=6388EBFE"
+            width="150" alt="Dr R K Suresh Profile Picture"
+          />
+        </td>
+        <td>
+          <h1>Dr Suresh Ramansamy Kannaiyan</h1>
+          <p>I am Web Developer. I Love❤️ MERN-Full Stack Development</p>
+          <p>Address:	<br>
+            No. 7, Badrakaliamman Kovil 3rd Street, Uppilipalayam<br>Coimbatore,
+            Tamil Nadu, India. PIN: 641015<br>
+            Mobile Number:	(+91) 94421 10920<br> 
+            Email ID:	prof.r.k.suresh@gmail.com<br>
+            LinkedIn Profile: https://www.linkedin.com/in/drrksuresh/
+            </p>
+        </td>
+      </tr>
+    </table>
 
-  <img
-    src="https://scontent.fmaa6-1.fna.fbcdn.net/v/t39.30808-6/317080064_123158903931753_1023207503705914209_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=730e14&_nc_ohc=P3A7ChhjrTkAX9kEFpG&_nc_ht=scontent.fmaa6-1.fna&oh=00_AfA9FD3W85Ev_G9LQf2-gcch-0CQLynGqgkpSSiukqgxMQ&oe=6388EBFE"
-    alt="Dr R K Suresh Profile Picture"
-  />
-  <h1>Dr Suresh Ramansamy Kannaiyan</h1>
-  <em>Vice President, <strong>The clocktos.com</strong></em>
-
-  <p>I am Web Developer. I Love MERN-Full Stack Development</p>
-  <hr size="2" />
-  <h3>Work Experience</h3>
-  <ul>
-    <li>
-      May 1996 - Aug 2008 & July 2016 - Nov 2021,
-      <a href="https:www.amrita.edu">Amrita Vishwa Vidyapeetham</a>, Coimbatore,
-      TN, India.<br />&emsp;Nov 2017 - Nov 2021<br />&emsp;&emsp;Principal, Amrita College of Engg. & Technology<br>
-      &emsp;&emsp;Campus Director, Amrita Institutions <br />&emsp;&emsp;(On Deputation from Amrita Vishwa
-      Vidyapeetham)<br />
-      &emsp;&emsp;<a href="https://amrita.edu.in">Amrita Institutions</a> Campus, Nagercoil, TN, India.
-      <br />
-      &emsp;Jul 2016 - Nov 2017 <br />&emsp;&emsp;Chairman - Admissions (B.Tech.
-      Programmes-All India) <br />&emsp;June 2006 - Aug 2008<br />&emsp;&emsp;Professor
-      and and Vice-Chairman<br />&emsp;&emsp;Mechanical Engineering<br />
-      &emsp;April 2003 - Jun 2006<br />&emsp;&emsp;Assistant Professor,
-      Mechanical Engineering<br />
-      &emsp;April 1999 - April 2003<br />&emsp;&emsp;Senior Lecturer, Mechanical
-      Engineering &emsp;<br />&emsp;May 1996 - April 1999<br />&emsp;&emsp;Lecturer,
-      Mechanical Engineering<br />&emsp;&emsp;Amrita Institute of Technology and
-      Sciences, Coimbatore.
-    </li>
-    <li>
-      Aug 2015 - May 2016 <br />&emsp;Principal<br />&emsp;SCAD College of
-      Engineering and Technology<br />&emsp;Cheranmahadevi, Tirunelveli, TN,
-      India.
-    </li>
-    <li>
-      Jun 2013 - Aug 2015 <br />&emsp;Principal<br />&emsp;Ahalia School of
-      Engineering and Technology<br />&emsp;Palakkad, Kerala, India.
-    </li>
-    <li>
-      Jun 2012 - May 2013 <br />&emsp;CEO, Excel Group of Institutions and<br />&emsp;Principal,
-      Excel College of Technology<br />&emsp;Komarapalayam, Salem, TN, India
-    </li>
-    <li>
-      Jun 2011 - May 2012 <br />&emsp;Principal<br />&emsp;Kalaignar Karunanidhi
-      Institute of Technology<br />&emsp;Coimbatore, TN, India.
-    </li>
-    <li>
-      Aug 2008 - May 2011 <br />&emsp;Principal<br />&emsp;P. A. College of
-      Engineering and Technology<br />&emsp;Pollachi, TN, India.
-    </li>
-    <li>
-      Jun 1989 - Apr 1996<br />&emsp;Lecturer, Mechanical Engineering<br />&emsp;Sree
-      Narayana Guru Institute of Technology<br />&emsp;Madukkarai-641105, TN,
-      India
-    </li>
-    <li>
-      Jul 1987 - Aug 1989<br />&emsp;Instructor, Mechanical Engineering<br />&emsp;Christ
-      the King Institute of Technology<br />&emsp;Coimbatore-641032, TN, India
-    </li>
-    <li>
-      May 1982 - June 1987<br />&emsp;Supervisor<br />&emsp;Anderson Accurate
-      Machiners<br />&emsp;Puliakulam, Coimbatore. TN, India
-    </li>
-  </ul>
-
-  <body></body>
-</html>
+    <hr size="2" />
+    <h3>Work Experience</h3>
+    <ul>
+      <li>
+        May 1996 - Aug 2008 & July 2016 - Nov 2021,
+        <a href="https:www.amrita.edu">Amrita Vishwa Vidyapeetham</a>,
+        Coimbatore, TN, India.<br />&emsp;Nov 2017 - Nov 2021<br />&emsp;&emsp;Principal,
+        Amrita College of Engg. & Technology<br />
+        &emsp;&emsp;Campus Director, Amrita Institutions <br />&emsp;&emsp;(On
+        Deputation from Amrita Vishwa Vidyapeetham)<br />
+        &emsp;&emsp;<a href="https://amrita.edu.in">Amrita Institutions</a>
+        Campus, Nagercoil, TN, India.
+        <br />
+        &emsp;Jul 2016 - Nov 2017 <br />&emsp;&emsp;Chairman - Admissions
+        (B.Tech. Programmes-All India) <br />&emsp;June 2006 - Aug 2008<br />&emsp;&emsp;Professor
+        and and Vice-Chairman<br />&emsp;&emsp;Mechanical Engineering<br />
+        &emsp;April 2003 - Jun 2006<br />&emsp;&emsp;Assistant Professor,
+        Mechanical Engineering<br />
+        &emsp;April 1999 - April 2003<br />&emsp;&emsp;Senior Lecturer,
+        Mechanical Engineering &emsp;<br />&emsp;May 1996 - April 1999<br />&emsp;&emsp;Lecturer,
+        Mechanical Engineering<br />&emsp;&emsp;Amrita Institute of Technology
+        and Sciences, Coimbatore.
+      </li>
+      <li>
+        Aug 2015 - May 2016 <br />&emsp;Principal<br />&emsp;SCAD College of
+        Engineering and Technology<br />&emsp;Cheranmahadevi, Tirunelveli, TN,
+        India.
+      </li>
+      <li>
+        Jun 2013 - Aug 2015 <br />&emsp;Principal<br />&emsp;Ahalia School of
+        Engineering and Technology<br />&emsp;Palakkad, Kerala, India.
+      </li>
+      <li>
+        Jun 2012 - May 2013 <br />&emsp;CEO, Excel Group of Institutions and<br />&emsp;Principal,
+        Excel College of Technology<br />&emsp;Komarapalayam, Salem, TN, India
+      </li>
+      <li>
+        Jun 2011 - May 2012 <br />&emsp;Principal<br />&emsp;Kalaignar
+        Karunanidhi Institute of Technology<br />&emsp;Coimbatore, TN, India.
+      </li>
+      <li>
+        Aug 2008 - May 2011 <br />&emsp;Principal<br />&emsp;P. A. College of
+        Engineering and Technology<br />&emsp;Pollachi, TN, India.
+      </li>
+      <li>
+        Jun 1989 - Apr 1996<br />&emsp;Lecturer, Mechanical Engineering<br />&emsp;Sree
+        Narayana Guru Institute of Technology<br />&emsp;Madukkarai-641105, TN,
+        India
+      </li>
+      <li>
+        Jul 1987 - Aug 1989<br />&emsp;Instructor, Mechanical Engineering<br />&emsp;Christ
+        the King Institute of Technology<br />&emsp;Coimbatore-641032, TN, India
+      </li>
+      <li>
+        May 1982 - June 1987<br />&emsp;Supervisor<br />&emsp;Anderson Accurate
+        Machiners<br />&emsp;Puliakulam, Coimbatore. TN, India
+      </li>
+    </ul>
+  </body>
+  <hr />
+  <h3>Academic Qualifications</h3>
+  <table>
+    <tr>
+      <td>Period</td><td>Qualification Acquired</td></tr>
+    </tr>
+    <tr>
+        <td>1978</td><td>Passed S.S.L.C-Secondary School Leaving Certificate from Government High School, Kamayagoundan Patti, Theni District (72%)</td>
+    </tr><tr>
+        <td>1982</td><td>Passed DME-Diploma in Mechanical Engineering from Government Polytechnic, Karaikudi with First Class (76%)</td>
+    </tr>
+    <tr>
+        <td>1989</td><td>Passed BE-B.E. (Mechanical Engineering) from Government College of Technology, Coimbatore with First Class (72%)</td>
+    </tr>
+    <tr>
+        <td>1997</td><td>Passed M.E. (Production Engineering) from PSG College of Technology, Bharathiar University, Coimbatore with First Class, (78%).</td>
+    </tr>
+    <tr>
+        <td>1994</td><td>Obtained Ph.D. in Mechanical Engineering, PSG College of Technology, Bharathiar University. Thesis Title: An Investigation on the Application of Metaheuristics to Job Shop Scheduling Problems with Multiple Objectives</td>
+    </tr>
+    <tr>
+        <td>2005</td><td>PGDMM-Postgraduate Diploma in Marketing Management, IGNOU, New Delhi</td>
+    </tr>
+    <tr></tr>
+  </table>
+  <hr />
+  <h3>Service Recognitions</h3>
+  <table>
+    <tr><td>Period</td><td>Hon. Service/Position Held</td></tr>
+    <tr><td>2007-2008</td><td>Chairman, NAAC Committee (March 2007 to July 2008), Amrita Vishwa Vidyapeetham, Coimbatore. (First NAAC Certification)</td></tr>
+    <tr><td>2021</td><td>Council Member, IE(I), Kanyakumari Local Center</td></tr>
+    <tr><td>2003 - 2005</td><td>Elected as a National Executive Council Member of ISTE, New Delhi</td></tr>
+    <tr><td>2006 - 2008</td><td>Elected as a National Executive Council Member of ISTE, New Delhi</td></tr>
+    <tr><td>2012 - 2014</td><td>Elected as a National Executive Council Member of ISTE, New Delhi</td></tr>
+    <tr><td>2020 - 2025</td><td>Elected as a National Executive Council Member of ISTE, New Delhi</td></tr>
+    <tr><td>2015 - 2016</td><td>Member, Academic Council, Anna University Chennai</td></tr>
+    <tr><td>2015 - 2017</td><td>Member of Examination Board, Texila American University</td></tr>
+    <tr><td>2013 - 2014</td><td>Member, Board of Studies, Manufacturing Engineering, Manakkula Vinayagar College of Engineering, Pondicherry</td></tr>
+    <tr><td>2010 - 2012</td><td>Member, Board of Studies, Mechanical Engineering, ANNA University of Technology, Madurai, TN</td></tr>
+    <tr><td>2012 - 2015</td><td>Member, Board of Studies, Mechanical Engineering, Adhiyaman College of Engineering (Affiliated to ANNA University, Coimbatore), Hosur, TN</td></tr>
+    <tr><td>2009 - 2011</td><td>Member, Board of Studies, Mechanical Engineering, Adhiyaman College of Engineering (Affiliated to ANNA University, Coimbatore), Hosur, TN</td></tr>
+    <tr><td>2014 - 2015</td><td>Member, Academic Board, Thiagarajar Polytechnic College -Autonomous, Salem</td></tr>
+    <tr><td>2008 - 2009</td><td>Member, Board of Studies, Mechanical Engineering, K.S. Rangasamy College of Technology (Affiliated to ANNA University, Coimbatore), Tiruchengode, Namakkal District, TN</td></tr>
+    <tr><td>2009 - 2016</td><td>Member, Academic Council, Sona College of Technology, Salem</td></tr>
+    <tr><td>2011 - 2012</td><td>Member, Board of Studies, Mechatronics Engineering, KSR College of Technology, Thiruchengode</td></tr>
+    <tr><td>2009 - 2011</td><td>Chairman, Indian Society for Technical Education, Tamilnadu and Puducherry State</td></tr>
+    <tr><td>2011 - 2013</td><td>Member-Academic Board, PSG Polytechnic College, Peelamedu, Coimbatore</td></tr>
+    <tr><td>2008 - 2010</td><td>Member, Board of Studies, Mechanical Engineering, ANNA University of Technology, Coimbatore, TN</td></tr>
+    <tr><td>2008 - 2010</td><td>Member-Academic Board, P.A.C Ramasamy Raja Polytechnic College, Rajapalayam, TN</td></tr>
+    <tr><td>2006 - 2008</td><td>Member, Board of Studies, Mechanical Engineering, Amrita University, Coimbatore</td></tr>
+    </table>
+  <hr>
+  </html>
