--- a/index.html
+++ b/index.html
@@ -27,17 +27,16 @@ from Udemy
         <td>
           <img
             src="https://scontent.fmaa6-1.fna.fbcdn.net/v/t39.30808-6/317080064_123158903931753_1023207503705914209_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=730e14&_nc_ohc=P3A7ChhjrTkAX9kEFpG&_nc_ht=scontent.fmaa6-1.fna&oh=00_AfA9FD3W85Ev_G9LQf2-gcch-0CQLynGqgkpSSiukqgxMQ&oe=6388EBFE"
-            width="150" alt="Dr R K Suresh Profile Picture"
+            width="175" alt="Dr R K Suresh Profile Picture"
           />
         </td>
         <td>
           <h1>Dr Suresh Ramansamy Kannaiyan</h1>
           <p>I am Web Developer. I Love❤️ MERN-Full Stack Development</p>
           <p>Address:	<br>
-            No. 7, Badrakaliamman Kovil 3rd Street, Uppilipalayam<br>Coimbatore,
+            No. 7, Badrakaliamman Kovil 3rd Street, Uppilipalayam, Coimbatore,
             Tamil Nadu, India. PIN: 641015<br>
-            Mobile Number:	(+91) 94421 10920<br> 
-            Email ID:	prof.r.k.suresh@gmail.com<br>
+            Mobile Number:	(+91) 94421 10920, Email ID:	prof.r.k.suresh@gmail.com<br>
             LinkedIn Profile: https://www.linkedin.com/in/drrksuresh/
             </p>
         </td>
